Change nav font size to prevent overflow on browser resize

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -62,7 +62,7 @@ body {
   padding: 5px 20px;
 }
 .navbar-default .navbar-nav > li > a {
-  font-size: 1.5em;
+  font-size: 1.35em;
 }
 
 .navbar-default .navbar-nav > a, 
